--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 
-@import url('https://fonts.googleapis.com/css?family=Spicy+Rice&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Open+Sans&display=swap');
 
 html {
   font-size: 16px;
 }
 
 body {
-  font-family: "Arial", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   color: #222;
   line-height: 1.5;
 }
@@ -17,7 +17,7 @@ body {
 }
 
 h1, h2 {
-  font-family: 'Spicy Rice', cursive;
+  font-family: 'Josefin Sans', sans-serif;
   font-weight: 900
 }
 
