--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,11 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Permanent+Marker&display=swap');
 
 html {
   font-size: 16px;
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
   color: #222;
   line-height: 1.5;
 }
@@ -17,7 +16,7 @@ body {
 }
 
 h1, h2 {
-  font-family: 'Josefin Sans', sans-serif;
+ font-family: 'Permanent Marker', cursive;
   font-weight: 900
 }
 
